Fixed post width on mobile screen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,7 @@ body a {
     display: block;
     background: var(--postBackground);
     padding: 1rem;
-    width: 100%;
+    width: calc(100% - 2rem);
     border-radius: .25rem;
     box-shadow: 0 .3rem .3rem rgba(0, 0, 0, .025);
     margin: 1rem 0;
